--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ plugins {
 version = "1.0"
 group= "com.connorlinfoot.mctools" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "mctools"
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 minecraft {
     version = "1.9-12.16.0.1811-1.9"
